--- a/app/src/main/res/layout/adapter_address_item.xml
+++ b/app/src/main/res/layout/adapter_address_item.xml
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/imageHome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_22sdp"
+            android:layout_height="@dimen/_22sdp"
             android:layout_centerVertical="true"
             android:src="@drawable/home_icon"
             app:tint="@color/orange" />
