--- a/app/src/main/res/layout/alert_dialog_addresses_popup.xml
+++ b/app/src/main/res/layout/alert_dialog_addresses_popup.xml
@@ -14,6 +14,7 @@
         android:layout_centerInParent="true"
         app:cardCornerRadius="@dimen/_10sdp"
         app:cardElevation="@dimen/_5sdp">
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -157,8 +158,8 @@
 
                     <ImageView
                         android:id="@+id/imgLocation"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/_22sdp"
+                        android:layout_height="@dimen/_22sdp"
                         android:layout_centerVertical="true"
                         android:src="@drawable/ic_location_icon" />
 
