--- a/app/src/main/res/layout/adapter_layout_supermarket.xml
+++ b/app/src/main/res/layout/adapter_layout_supermarket.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/_80sdp"
     android:layout_height="wrap_content"
     android:id="@+id/cardViewMainLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -23,8 +23,8 @@
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/imageSuperMarket"
-                android:layout_width="@dimen/_100sdp"
-                android:layout_height="@dimen/_85sdp"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_50sdp"
                 android:layout_margin="@dimen/_5sdp"
                 android:elevation="@dimen/_3sdp"
                 android:scaleType="centerCrop"
@@ -42,11 +42,12 @@
 
         <TextView
             android:id="@+id/tvSuperMarketItems"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/_30sdp"
             android:layout_below="@+id/relSuperMarkets"
             android:layout_centerHorizontal="true"
             android:fontFamily="@font/poppins"
+            android:gravity="center"
             android:textAlignment="center"
             android:layout_marginHorizontal="@dimen/_3sdp"
             android:maxLines="2"
@@ -57,12 +58,13 @@
 
         <TextView
             android:id="@+id/tvSuperMarketRupees"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvSuperMarketItems"
             android:layout_centerHorizontal="true"
             android:fontFamily="@font/poppins"
             android:maxWidth="@dimen/_40sdp"
+            android:gravity="center"
             android:singleLine="true"
             android:text=""
             android:textColor="#0A2533"
