--- a/app/src/main/res/layout/fragment_super_markets_near_by.xml
+++ b/app/src/main/res/layout/fragment_super_markets_near_by.xml
@@ -5,15 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.mainfragment.commonscreen.supermarktesnearbyscreen.SuperMarketsNearByFragment">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
-
-        <LinearLayout
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -115,12 +109,10 @@
                 android:id="@+id/recySuperMarket"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_15sdp"
+                android:orientation="vertical"
+                android:layout_margin="@dimen/_10sdp"
+                app:spanCount="3"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                app:spanCount="3" />
-
+                />
         </LinearLayout>
-    </ScrollView>
-
 </RelativeLayout>
