--- a/app/src/main/res/layout/adapter_basket_ing_item.xml
+++ b/app/src/main/res/layout/adapter_basket_ing_item.xml
@@ -108,8 +108,9 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="@dimen/_5sdp"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginEnd="@dimen/_6sdp">
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="@dimen/_10sdp">
+
                     <TextView
                         android:id="@+id/tvFoodPrice"
                         android:layout_width="wrap_content"
@@ -120,6 +121,7 @@
                         android:text=""
                         android:textColor="#06C169"
                         android:textSize="@dimen/_10ssp" />
+
                     <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
