--- a/app/src/main/res/layout/fragment_invitations_screen.xml
+++ b/app/src/main/res/layout/fragment_invitations_screen.xml
@@ -186,7 +186,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rcyFriendsInvite"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:nestedScrollingEnabled="false"
                     android:layout_marginHorizontal="@dimen/_8sdp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     android:layout_below="@+id/relFriendStatus" />
