--- a/app/src/main/res/layout/adapter_ingredients_item.xml
+++ b/app/src/main/res/layout/adapter_ingredients_item.xml
@@ -103,6 +103,7 @@
                         android:id="@+id/tvBreakfast"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_30sdp"
+                        android:maxLines="2"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:layout_marginTop="@dimen/_5sdp"
