--- a/app/src/main/res/layout/alert_dialog_logout_popup.xml
+++ b/app/src/main/res/layout/alert_dialog_logout_popup.xml
@@ -15,7 +15,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/_16sdp">
+            android:layout_marginHorizontal="@dimen/_10sdp">
 
             <ImageView
                 android:id="@+id/imgLogout"
@@ -42,7 +42,7 @@
                 android:layout_below="@+id/tvLogout"
                 android:layout_marginTop="@dimen/_8sdp"
                 android:fontFamily="@font/poppins"
-                android:text="Do you want to logut from account ?"
+                android:text="Do you want to logOut from account ?"
                 android:textColor="@color/light_black"
                 android:textSize="@dimen/_12sdp" />
 
