--- a/app/src/main/res/layout/fragment_dietary_restrictions.xml
+++ b/app/src/main/res/layout/fragment_dietary_restrictions.xml
@@ -73,7 +73,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_below="@+id/tvRestrictions"
             android:layout_above="@+id/relBottomBtn"
             android:layout_marginTop="@dimen/_10sdp"
