--- a/app/src/main/res/layout/alert_dialog_logout_popup.xml
+++ b/app/src/main/res/layout/alert_dialog_logout_popup.xml
@@ -42,7 +42,7 @@
                 android:layout_below="@+id/tvLogout"
                 android:layout_marginTop="@dimen/_8sdp"
                 android:fontFamily="@font/poppins"
-                android:text="Do you want to logOut from account ?"
+                android:text="Do you want to logout from account ?"
                 android:textColor="@color/light_black"
                 android:textSize="@dimen/_12sdp" />
 
