--- a/app/src/main/res/layout/fragment_dietary_restrictions.xml
+++ b/app/src/main/res/layout/fragment_dietary_restrictions.xml
@@ -106,7 +106,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:fontFamily="@font/poppins"
+                        android:fontFamily="@font/poppins_semibold"
                         android:gravity="center_vertical"
                         android:paddingHorizontal="@dimen/_15sdp"
                         android:paddingVertical="@dimen/_10sdp"
