--- a/app/src/main/res/layout/fragment_full_cooked_schedule.xml
+++ b/app/src/main/res/layout/fragment_full_cooked_schedule.xml
@@ -98,6 +98,7 @@
                 android:layout_marginTop="@dimen/_7sdp"
                 android:layout_marginHorizontal="@dimen/_10sdp"
                 android:paddingHorizontal="@dimen/_6sdp"
+                android:gravity="center"
                 android:paddingVertical="@dimen/_10sdp"
                 android:background="@drawable/calendar_events_bg">
 
@@ -137,7 +138,7 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerViewWeekDays"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_gravity="center_vertical"
