--- a/app/src/main/res/layout/fragment_statistics_week_year.xml
+++ b/app/src/main/res/layout/fragment_statistics_week_year.xml
@@ -80,6 +80,7 @@
                 android:layout_marginTop="@dimen/_15sdp"
                 android:background="@drawable/calendar_events_stats_bg"
                 android:orientation="vertical"
+                android:gravity="center"
                 android:paddingHorizontal="@dimen/_6sdp"
                 android:paddingVertical="@dimen/_10sdp">
 
@@ -119,11 +120,12 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerViewWeekDays"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:overScrollMode="never"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
 
             </LinearLayout>
 
